--- a/jread/Suicide_vs_gdp.ipynb
+++ b/jread/Suicide_vs_gdp.ipynb
@@ -5,9 +5,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1073,7 +1071,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x206002d24e0>"
+       "<matplotlib.collections.PathCollection at 0x1d4be6d53c8>"
       ]
      },
      "execution_count": 8,
@@ -1319,7 +1317,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x206004846d8>"
+       "<matplotlib.collections.PathCollection at 0x1d4befb0518>"
       ]
      },
      "execution_count": 13,
@@ -1555,7 +1553,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x20600567748>"
+       "<matplotlib.collections.PathCollection at 0x1d4bf4c13c8>"
       ]
      },
      "execution_count": 17,
@@ -1679,13 +1677,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JohnRead\\anaconda\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\tinat_000\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  \n",
-      "C:\\Users\\JohnRead\\anaconda\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\tinat_000\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
