--- a/tnguyen/GDP_scatter.ipynb
+++ b/tnguyen/GDP_scatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4          Boomers  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "4  1.230000e+09       $437.00   "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,16 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a64c9c7908>"
+       "<matplotlib.collections.PathCollection at 0x1771e32b9b0>"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "3.402836006166142e-47"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.760431231640396"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(t_stat, p) = stats.ttest_ind(x_axis, y_axis, equal_var=False)\n",
+    "t_stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +559,7 @@
        "179         1251     8219386             194.62  3.820000e+11    $46,484.00   "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,16 +572,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a64c9e7a58>"
+       "<matplotlib.collections.PathCollection at 0x1771e052828>"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +642,7 @@
        "2.501178306126408e-05"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +671,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.568169046616642"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(t_stat, p) = stats.ttest_ind(x_axis_2015, y_axis_2015, equal_var=False)\n",
+    "t_stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +815,7 @@
        "169         1399     7827461             235.25  3.160000e+11    $40,367.00   "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,16 +828,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a64ca88518>"
+       "<matplotlib.collections.PathCollection at 0x1771e134198>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -818,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +898,7 @@
        "0.00016372935198783524"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,17 +927,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.9514910303009563"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(t_stat, p) = stats.ttest_ind(x_axis_2005, y_axis_2005, equal_var=False)\n",
+    "t_stat"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-Test : 3.9514910303009563\n",
+      "P-Value : 0.00016372935198783524\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"T-Test :\", (t_stat))\n",
+    "print(\"P-Value :\",(p))"
+   ]
   },
   {
    "cell_type": "code",
